fix the hover on a tag issues for lunch and dinner logos and make the scale to 1.08 to avoid the layout shift

--- a/src/css/food-menu.css
+++ b/src/css/food-menu.css
@@ -23,9 +23,9 @@
       transition: 0.4s ease;
     }
 
-    a:hover :is(.lunch-logo, .dinner-logo) img  {
-      -webkit-transform: scale(1.1);
-      transform: scale(1.1);
+    a:hover:is(.lunch-logo, .dinner-logo) img {
+      -webkit-transform: scale(1.08);
+      transform: scale(1.08);
     }
 
     .show-image {
